2005-10-15  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclfile.c (UnspliceChannel): disable any potential
	ready-to-fire events in the threads event queue which 
	reference to-be-unspliced channel.

2005-10-11  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/nsmain.c (StartWatchedServer): clear signal handlers
	before re-starting the server.

2005-10-10  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/adprequest.c Removed OS/FS fallbacks. Now use TclVFS 
	* nsd/adpeval.c    wrappers always. This simplifies code
	* nsd/fastpath.c   and (hopefully) does not introduce any
	* nsd/urlopen.c    (perceivable) speed penalties.

2005-10-09  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* autogen.sh: New script to run the various autotools to generate
	the build system.
	* missing: Add this default automake helper script.
	* configure.in: Initialise automake, even though we don't use it,
	so that we can use aclocal to manage our m4 scripts.
	* aclocal.m4:
	* acinclude.m4: Contents of aclocal.m4 now moved to acinclude.m4.
	aclocal.m4 is now autogenerated by the aclocal tool, called from
	within autogen.
	* configure:
	* include/nsconfig.h.in: Remove autogenerated scripts from cvs.
	New strategy is to call autogen.sh on first checkout to intialise
	the build environment.
	* tcl.m4:
	* m4/tcl.m4: Move into m4 subdirectory.  Upgrade to revision 1.74
	from Tcl cvs.  Fully quote macro names (needs to go upstream).
	* .cvsignore:
	* include/.cvsignore: Ignore some new autogenerated build scripts,
	and some old ones we no longer keep in cvs.

	* nsd/nsd.h:
	* nsd/modload.c:
	* nsd/nsmain.c:
	* nsd/server.c:
	* nsd/init.tcl: Add new Tcl command ns_moduleload which loads a
	binary module into the server and calls it's initialising
	function.  Remove NsLoadModules and instead call ns_moduleload
	from the init.tcl bootstrap.  Policy about where modules are
	located and when they are loaded is now easily accessible to Tcl.